Chat emoticon button misalignment fix

--- a/friends.custom.css
+++ b/friends.custom.css
@@ -4545,3 +4545,7 @@ span.mention {
 .BroadcastVideoWatchState_Text {
     color: white;
 }
+
+.RVIs84dAE6wHcjH9tkinc .tool-tip-source {
+    height: 24px!important;
+}
